--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -6,7 +6,7 @@ RUN apk add --no-cache git \
     && npm config set -g registry https://registry.npmmirror.com \
     && npm i pnpm -g
 
-COPY .npmrc package.json pnpm-lock.yaml ./
+COPY .npmrc package.json ./
 RUN pnpm install
 
 COPY . .
@@ -17,6 +17,6 @@ FROM nginx:stable-alpine AS production-stage
 COPY --from=build-stage /app/dist /usr/share/nginx/html
 COPY --from=build-stage /app/nginx.temp.conf /etc/nginx/conf.d/website.conf
 
-EXPOSE 7300
+EXPOSE 9701
 
 CMD ["nginx", "-g", "daemon off;"]
