--- a/docker-compose.server.yml
+++ b/docker-compose.server.yml
@@ -1,7 +1,7 @@
 services:
-  db-service:
+  db-mysql:
     image: mysql:8.0
-    container_name: db-service
+    container_name: db-mysql
     restart: always
     ports:
       - 9756:3306
@@ -13,6 +13,25 @@ services:
       - data_mysql:/var/lib/mysql
     networks:
       - demo-network
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      retries: 5
+      start_period: 10s
+  db-redis:
+    image: redis:alpine
+    container_name: db-redis
+    ports:
+      - 9779:6379
+    volumes:
+      - data_redis:/data
+    networks:
+      - demo-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      retries: 3
+      start_period: 5s
   hono-service:
     build: ./server
     container_name: hono-service
@@ -20,13 +39,19 @@ services:
     ports:
       - 9750:9750
     environment:
-      DATABASE_HOSTNAME: db-service
+      DATABASE_HOSTNAME: db-mysql
       DATABASE_PORT: 3306
       DATABASE_USERNAME: root
       DATABASE_PASSWORD: color123
       DATABASE_NAME: hono_db
+      REDIS_HOSTNAME: db-redis
+      REDIS_PORT: 6379
+      PORT: 9750
     depends_on:
-      - db-service
+      db-mysql:
+        condition: service_healthy
+      db-redis:
+        condition: service_healthy
     networks:
       - demo-network
 
@@ -36,3 +61,4 @@ networks:
 
 volumes:
   data_mysql:
+  data_redis:
