--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,11 @@
   "name": "server",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "dev": "bun --watch --env-file=.env.development run ./index.ts"
+  },
   "devDependencies": {
+    "@antfu/eslint-config": "^4.1.1",
     "@types/bun": "latest"
   },
   "peerDependencies": {
@@ -10,6 +14,7 @@
   },
   "dependencies": {
     "hono": "^4.6.16",
+    "ioredis": "^5.4.2",
     "knex": "^3.1.0",
     "mysql2": "^3.12.0"
   }
