--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^3.13.0",
     "@arco-design/web-vue": "^2.56.3",
+    "@arco-plugins/vite-vue": "^1.4.5",
     "@coloration/asker": "^1.2.2",
     "@iconify-json/carbon": "^1.2.5",
     "@types/node": "^22.10.5",
